--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <li>1. Ali Susanto : 12311114</li>
         <li>2. Budi : 23153</li>
         <li>3. Faris : 5623131</li>
+        
     </ul>
+    <p>Keterangan</p>
 </body>
 </html>
